From 0172ece (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member functions compute_power_spectrum() and
compute_power_spectrum_uncertainty() of class
ClosurePhaseDelaySpectrum, update diagoffsets to be a dictionary
instead of a list. Update respective docstrings accordingly

From 08df256 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) Start work on producing incoherent average of power spectrum
through function incoherent_cross_power_spectrum_average()

From 6a887cb (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, fix bug in calculation of diagonal weights
along the LST axis while operating on collapse_axes based on the
number of NaN along that axis
(*) In member function compute_power_spectrum_uncertainty() of class
ClosurePhaseDelaySpectrum, fix bug in calculation of diagonal weights
along the LST axis while operating on collapse_axes based on the
number of NaN along that axis

From d2e76c3 (BSP_PS_errorbar):
==============================

In prisim/bispectrum_phase.py,

(*) In member function FT() of class ClosurePhaseDelaySpectrum,
allow visscaleinfo to contain visibilities in the form of a numpy
array or an instance of class InterferometerArray. Update computing
of matching baselines and LST accordingly. Update member function
docstring accordingly.
(*) In member function FT() of class ClosurePhaseDelaySpectrum,
pass key 'bltriplet' in input visscaleinfo. Use this information to
determine the matching baselines in the instance of class
ClosurePhaseDelaySpectrum if the latter has to be used for scaling
visibilities. Update member function docstring accordingly
(*) If LST range in the input instance of class InterferometerArray
does not cover the data LST range, fill those visibilities with NaN
and propagate it to the computed delay spectrum. Update member